# FeedbackLoop

./: PROPOSAL.md  README.md  TECHNICAL_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/feedbackloop/: cli.py
tests/: test_cli.py
